--- a/_posts/2022-02-23-前端复习之路-HTML篇.md
+++ b/_posts/2022-02-23-前端复习之路-HTML篇.md
@@ -51,6 +51,8 @@ https://juejin.cn/post/7027728332972113927#heading-11
 
 ### defer 和 async 的区别
 
+![](../img/async-defer.png)
+
 两个属性都是去异步加载外部的 js 脚本文件（与文档的加载是并行的），但执行顺序不一样：
 
 -   **async**：加载完成后就执行脚本，多个 async 的标签，不能保证加载的顺序。
@@ -59,6 +61,6 @@ https://juejin.cn/post/7027728332972113927#heading-11
 ### JS 和 CSS 会阻塞解析吗？
 
 -   link 标签的 CSS 不阻塞页面的解析，但阻塞页面渲染。(阻塞 render tree 的生成，可以避免页面样式闪烁)。
--   内链或者外链 JS 脚本都会阻塞页面的解析和渲染。
+-   内链或者外链 JS 脚本都会阻塞页面的解析和渲染（JS 引擎线程 与 GUI 渲染线程 互斥）。
 -   CSS 会阻塞 JS 的执行（保证 JS 脚本拿到最新的 CSS 属性）。这种情况下 CSS 不仅阻塞 JS 的执行还阻塞了页面的解析（因为 JS 会同步阻塞页面解析）。
 -   JS 会触发页面渲染。
