--- a/_posts/2022-02-23-前端复习之路-工程化篇.md
+++ b/_posts/2022-02-23-前端复习之路-工程化篇.md
@@ -323,7 +323,7 @@ Terser、UglifyJS 等 DCE 工具“摇”掉标记中无效的代码。
 3. 根据导出值的使用情况生成不同的导出语句。
 4. 使用 DCE 工具删除 Dead Code，实现完整的树摇效果。
 
-### Webpack 热更新（HMR）的实现原理
+## Webpack 热更新（HMR）的实现原理
 
 1. 第一步，webpack watch 模式下，文件系统中某一个文件发生修改，webpack 监听到文件变化，根据配置文件对模块重新编译打包，并将打包后的代码通过 JS 对象保存在内存中。
 2. 第二步，webpack-dev-server 的中间件 webpack-dev-middleware 调用 webpack 暴露的 API 对代码变化进行监听，并且告诉 webpack 将代码打包到内存中。
