--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -75,6 +75,10 @@ function add(...args){
 
 ## 防抖和节流
 
+函数防抖是指在事件被触发 n 秒后再执行回调，如果在这 n 秒内事件又被触发，则重新计时。这可以使用在一些点击请求的事件上，避免因为用户的多次点击向后端发送多次请求。
+
+函数节流是指规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。节流可以使用在 scroll 函数的事件监听上，通过事件节流来降低事件调用的频率。
+
 ```js
 function debounce(fn, wait) {
     let timer = null;
@@ -398,4 +402,50 @@ function deepClone(target, map = new WeakMap()) {
         return target;
     }
 }
+```
+
+## 并发异步调度器
+
+```js
+class Scheduler {
+    constructor(maxConcurrency) {
+        this.maxConcurrency = maxConcurrency;
+        this.currentConcurrency = 0;
+        this.taskQueue = [];
+    }
+
+    addTask(delay, value) {
+        const task = () =>
+            new Promise(resolve => {
+                setTimeout(() => {
+                    console.log(value);
+                    resolve();
+                }, delay);
+            });
+
+        if (this.currentConcurrency < this.maxConcurrency) {
+            this.runTask(task);
+        } else {
+            this.taskQueue.push(task);
+        }
+    }
+
+    runTask(task) {
+        this.currentConcurrency++;
+        task().then(() => {
+            this.currentConcurrency--;
+            if (this.taskQueue.length > 0) {
+                const nextTask = this.taskQueue.shift();
+                this.runTask(nextTask);
+            }
+        });
+    }
+}
+
+const scheduler = new Scheduler(2);
+
+scheduler.addTask(1000, '1');
+scheduler.addTask(500, '2');
+scheduler.addTask(300, '3');
+scheduler.addTask(400, '4');
 ```
