--- a/_posts/2022-02-23-前端复习之路-操作系统篇.md
+++ b/_posts/2022-02-23-前端复习之路-操作系统篇.md
@@ -8,9 +8,15 @@ tags:
     - 复习
 ---
 
-### 概念
+## 概念
 
-操作系统是管理计算机硬件资源和软件资源的最基本的系统软件， 四大特征:共享性，并发性，虚拟性，异步性
+操作系统是管理计算机硬件资源和软件资源的最基本的系统软件， 四大特征：共享性，并发性，虚拟性，异步性
+
+### 进程、线程
+
+进程是 cpu 资源分配的最小单位
+
+线程是 cpu 调度的最小单位
 
 做个简单的比喻：进程=火车，线程=车厢
 
