--- a/_posts/2022-02-23-前端复习之路-网络篇.md
+++ b/_posts/2022-02-23-前端复习之路-网络篇.md
@@ -48,6 +48,8 @@ see: https://zhuanlan.zhihu.com/p/43789231
 
 ## HTTP 各版本差异
 
+![HTTP 各版本](../img/http-versions.png)
+
 `HTTP 1.0`
 
 短链接，每次请求都会建立一个 TCP 连接，服务器处理完之后就会断开连接。
@@ -156,3 +158,23 @@ performance.getEntriesByName("first-contentful-paint")[0].startTime
 
 总结：
 正向代理是客户端代理，代理客户端的请求；而反向代理是服务端代理，代理服务端的响应。正向代理隐藏客户端身份，用于访问被封锁的内容，而反向代理隐藏服务端身份，提供负载均衡和安全性等功能。
+
+## TCP 粘包问题
+
+TCP 粘包就是指发送方发送的若干包数据到达接收方时粘成了一包，从接收缓冲区来看，后一包数据的头紧接着前一包数据的尾。
+
+**TCP 粘包问题原因：**
+
+TCP 是一个面向「流」的协议，所谓流就是没有界限的一长串二进制数据。TCP 作为传输层协议并不了解上层业务数据的具体含义，它会根据 TCP 缓冲区的实际情况进行数据包的划分，所以在业务上认为是一个完整的包，可能会被 TCP 拆分成多个包进行发送，也有可能把多个小的包封装成一个大的数据包发送，这就会出现粘包拆包的问题。
+
+> UDP 有消息保护边界，不会发生粘包拆包问题
+
+例如，TCP 缓冲区是 1024 个字节大小，如果应用一次请求发送的数据量比较小，没达到缓冲区大小，TCP 则会将多个请求合并为同一个请求进行发送，站在业务上来看这就是「粘包」;
+
+如果应用一次请求发送的数据量比较大，超过了缓冲区大小，TCP 就会将其拆分为多次发送，这就是「拆包」，也就是将一个大的包拆分为多个小包进行发送。
+
+**TCP 粘包问题的解决：**
+
+-   发送端给每个数据包添加包首部，首部中应该至少包含数据包的长度，这样接收端在接收到数据后，通过读取包首部的长度字段，便知道每一个数据包的实际长度了。
+-   发送端将每个数据包封装为固定长度(不够的可以通过补其他字符填充)，这样接收端每次从接收缓冲区中读取固定长度的数据就自然而然的把每个数据包拆分开来。
+-   可以在数据包之间设置边界，如添加特殊符号，这样，接收端通过这个边界就可以将不同的数据包拆分开。
