--- a/_posts/2022-03-09-算法.md
+++ b/_posts/2022-03-09-算法.md
@@ -192,6 +192,71 @@ function quickSort(arr) {
 }
 ```
 
+优化版：
+
+① 左边界作为基准值
+
+```js
+function quickSortInPlace(arr, left = 0, right = arr.length - 1) {
+    if (left >= right) {
+        return;
+    }
+
+    const pivotIndex = partition(arr, left, right);
+    quickSortInPlace(arr, left, pivotIndex - 1);
+    quickSortInPlace(arr, pivotIndex + 1, right);
+}
+
+function partition(arr, left, right) {
+    const pivot = arr[left];
+    let i = left + 1;
+    let j = right;
+
+    while (i <= j) {
+        while (i <= j && arr[i] <= pivot) {
+            i++;
+        }
+        while (i <= j && arr[j] >= pivot) {
+            j--;
+        }
+        if (i < j) {
+            [arr[i], arr[j]] = [arr[j], arr[i]];
+        }
+    }
+
+    [arr[left], arr[j]] = [arr[j], arr[left]];
+    return j;
+}
+```
+
+② 右边界作为基准值
+
+```js
+function quickSortInPlace(arr, left = 0, right = arr.length - 1) {
+    if (left >= right) {
+        return;
+    }
+
+    const pivotIndex = partition(arr, left, right);
+    quickSortInPlace(arr, left, pivotIndex - 1);
+    quickSortInPlace(arr, pivotIndex + 1, right);
+}
+
+function partition(arr, left, right) {
+    const pivotIndex = right;
+    const pivot = arr[right];
+    let partitionIndex = left;
+    for (let i = left; i < right; i++) {
+        if (arr[i] < pivot) {
+            [arr[partitionIndex], arr[i]] = [arr[i], arr[partitionIndex]];
+            partitionIndex++;
+        }
+    }
+    [arr[partitionIndex], arr[pivotIndex]] = [arr[pivotIndex], arr[partitionIndex]];
+    return partitionIndex;
+}
+```
+
 ### 归并排序
 
 ```js
@@ -215,6 +280,54 @@ function merge(left, right) {
     }
 
     return res.concat(left).concat(right);
+}
+```
+
+### 堆排序
+
+① 建立大顶堆：最大元素位于堆顶。
+② 将堆顶元素（第一个元素）与堆底元素（最后一个元素）交换。此时数组最后一个元素最大，再排序剩余的元素。
+③ 从堆顶元素开始，从顶到底执行堆化操作（sift down）。完成堆化后，堆的性质得到修复。
+④ 重复上述步骤，循环 n - 1 轮后，即可完成数组排序。
+
+```js
+/* 堆的长度为 n ，从节点 i 开始，从顶至底堆化 */
+function siftDown(nums, n, i) {
+    while (true) {
+        // 判断节点 i, l, r 中值最大的节点，记为 ma
+        let l = 2 * i + 1;
+        let r = 2 * i + 2;
+        let ma = i;
+        if (l < n && nums[l] > nums[ma]) {
+            ma = l;
+        }
+        if (r < n && nums[r] > nums[ma]) {
+            ma = r;
+        }
+        // 若节点 i 最大或索引 l, r 越界，则无须继续堆化，跳出
+        if (ma === i) {
+            break;
+        }
+        // 交换两节点
+        [nums[i], nums[ma]] = [nums[ma], nums[i]];
+        // 循环向下堆化
+        i = ma;
+    }
+}
+
+/* 堆排序 */
+function heapSort(nums) {
+    // 建堆操作：堆化除叶节点以外的其他所有节点
+    for (let i = Math.floor(nums.length / 2) - 1; i >= 0; i--) {
+        siftDown(nums, nums.length, i);
+    }
+    // 从堆中提取最大元素，循环 n-1 轮
+    for (let i = nums.length - 1; i > 0; i--) {
+        // 交换根节点与最右叶节点（交换首元素与尾元素）
+        [nums[0], nums[i]] = [nums[i], nums[0]];
+        // 以根节点为起点，从顶至底进行堆化
+        siftDown(nums, i, 0);
+    }
 }
 ```
 
@@ -636,6 +749,86 @@ var maxDepth = function (root) {
 
     return res;
 };
+```
+
+## 实现一个最小堆
+
+```js
+class MinHeap {
+    constructor() {
+        this.heap = [];
+    }
+
+    swap(i, j) {
+        const temp = this.heap[i];
+        this.heap[i] = this.heap[j];
+        this.heap[j] = temp;
+    }
+
+    getParentIndex(i) {
+        return Math.floor((i - 1) / 2);
+    }
+
+    getLeftChildIndex(i) {
+        return i * 2 + 1;
+    }
+
+    getRightChildIndex(i) {
+        return i * 2 + 2;
+    }
+
+    insert(value) {
+        this.heap.push(value);
+        this.heapifyUp();
+    }
+
+    heapifyUp() {
+        let index = this.heap.length - 1;
+
+        while (index > 0) {
+            const parentIndex = this.getParentIndex(index);
+            // 最小堆：父节点值小于子节点值
+            if (this.heap[index] >= this.heap[parentIdx]) {
+                break;
+            }
+            this.swap(index, parentIndex);
+            index = parentIdx;
+        }
+    }
+
+    remove() {
+        if (this.heap.length === 0) {
+            return;
+        }
+
+        const root = this.heap[0];
+        const end = this.heap.pop();
+        this.heap[0] = end;
+        this.heapifyDown();
+        return root;
+    }
+
+    heapifyDown() {
+        let index = 0;
+        const length = this.heap.length;
+        while (this.getLeftChildIndex(index) < length) {
+            let minIndex = this.getLeftChildIndex(index);
+            const rightIndex = this.getRightChildIndex(index);
+            if (
+                rightIndex < length &&
+                this.heap[rightIndex] < this.heap[minIndex]
+            ) {
+                minIndex = rightIndex;
+            }
+
+            if (this.heap[index] < this.heap[minIndex]) {
+                break;
+            }
+            this.swap(minIndex, index);
+            index = minIndex;
+        }
+    }
+}
 ```
 
 ## 相关的算法手册网址
