--- a/_posts/2024-07-09-react位运算.md
+++ b/_posts/2024-07-09-react位运算.md
@@ -107,7 +107,7 @@ const InputContinuousLanes: Lanes = /*                  */ 0b0000000000000000000
 
 一些方法定义:
 
-1. `getHighestPriorityLanes`: 获取最高优先级
+-   `getHighestPriorityLanes`: 获取最高优先级
 
 ```js
 function getHighestPriorityLanes(lanes: Lanes | Lane): Lanes {
@@ -127,7 +127,7 @@ function getHighestPriorityLanes(lanes: Lanes | Lane): Lanes {
 }
 ```
 
-2. `getHighestPriorityLane`: 分离出最高优先级
+-   `getHighestPriorityLane`: 分离出最高优先级
 
 ```js
 function getHighestPriorityLane(lanes: Lanes) {
@@ -135,7 +135,7 @@ function getHighestPriorityLane(lanes: Lanes) {
 }
 ```
 
-3. `getLowestPriorityLane`: 分离出最低优先级
+-   `getLowestPriorityLane`: 分离出最低优先级
 
 ```js
 function getLowestPriorityLane(lanes: Lanes): Lane {
