--- a/_posts/2024-07-23-react优先级.md
+++ b/_posts/2024-07-23-react优先级.md
@@ -92,7 +92,7 @@ update 优先级的计算方法有以下几种:
 
 两个任务优先级。如果后者高于前者优先级，就会取消前者的任务调度；如果后者等于前者优先级，会复用前者的更新任务；如果后者低于前者优先级，会等前者更新后再进行任务调度。
 
-相关调度见 [ReactFiberRootScheduler](https://github.com/facebook/react/blob/main/packages/react-reconciler/src/ReactFiberRootScheduler.js#L286）
+相关调度见 [ReactFiberRootScheduler](https://github.com/facebook/react/blob/main/packages/react-reconciler/src/ReactFiberRootScheduler.js#L286)
 
 ```js
 const nextLanes = getNextLanes(
