--- a/_posts/2022-02-23-前端复习之路-CSS篇.md
+++ b/_posts/2022-02-23-前端复习之路-CSS篇.md
@@ -71,3 +71,17 @@ BFC 的作用：
 ● 解决 margin 的重叠问题：由于 BFC 是一个独立的区域，内部的元素和外部的元素互不影响，将两个元素变为两个 BFC，就解决了 margin 重叠的问题。  
 ● 解决高度塌陷的问题：在对子元素设置浮动后，父元素会发生高度塌陷，也就是父元素的高度变为 0。解决这个问题，只需要把父元素变成一个 BFC。常用的办法是给父元素设置 overflow:hidden。  
 ● 创建自适应两栏布局
+
+### 隐藏元素的方式
+
+| 隐藏方式                                 | 是否占据空间 | 是否响应鼠标事件 | 是否响应键盘事件 | 对读屏器的影响 |
+| ---------------------------------------- | ------------ | ---------------- | ---------------- | -------------- |
+| `display: none;`                         | 否           | 否               | 否               | 不可见         |
+| `visibility: hidden;`                    | 是           | 否               | 是               | 不可见         |
+| `opacity: 0;`                            | 是           | 是               | 是               | 可见           |
+| `position: absolute;` + `left: -9999px;` | 是           | 否               | 是               | 可见           |
+| `clip: rect(0, 0, 0, 0);`                | 是           | 否               | 是               | 可见           |
+| `clip-path: inset(100%);`                | 是           | 否               | 是               | 可见           |
+| `height: 0;` + `overflow: hidden;`       | 是           | 否               | 是               | 可见           |
+| `transform: scale(0, 0);`                | 是           | 否               | 是               | 可见           |
+| `aria-hidden="true"`                     | 是           | 是               | 是               | 不可见         |
