--- a/_posts/2022-02-23-前端复习之路-Vue篇.md
+++ b/_posts/2022-02-23-前端复习之路-Vue篇.md
@@ -218,3 +218,72 @@ LRU（Least rencently used）算法根据数据的历史访问记录来进行淘
 Vue 的 nextTick 其本质是对 JavaScript 执行原理 EventLoop 的一种应用。
 
 nextTick 的核心是利用了如 Promise 、MutationObserver、setImmediate、setTimeout 的原生 JavaScript 方法来模拟对应的微/宏任务的实现，本质是为了利用 JavaScript 的这些异步回调任务队列来实现 Vue 框架中自己的异步回调队列。
+
+### 状态管理
+
+#### Vuex
+
+Vuex 是一个用于 Vue.js 应用的状态管理模式 + 库。它充当应用程序中所有组件的集中存储，规则确保状态只能以可预测的方式进行更改。
+
+用法示例：
+
+```js
+import { createStore } from 'vuex';
+
+const counterstore = createStore({
+    state() {
+        return {
+            todoListItems: [],
+        };
+    },
+    getters: {
+        countList(state) {
+            return state.todoListItems.length();
+        },
+    },
+    actions: {
+        addNewToList({ commit }, item) {
+            commit('createNewItem', item);
+        },
+    },
+    mutations: {
+        createNewItem(state, item) {
+            state.todoListItems.push(item);
+        },
+    },
+});
+```
+
+更多见官方文档：https://vuex.vuejs.org/
+
+#### Pinia
+
+Pinia 是 Vue 的存储库，它允许你在组件/页面之间共享状态。如果您熟悉组合式 API，您可能会认为您已经可以通过简单的导出 const state = reactive（{}） 共享全局状态。这对于单页应用程序来说是正确的，但如果应用程序是服务器端呈现的，则会使应用程序暴露于安全漏洞。但是，即使在小型单页应用程序中。
+
+```js
+// stores/counter.js
+import { defineStore } from 'pinia';
+
+export const useCounterStore = defineStore('counter', {
+    state: () => {
+        return { count: 0 };
+    },
+    // could also be defined as
+    // state: () => ({ count: 0 })
+    actions: {
+        increment() {
+            this.count++;
+        },
+    },
+});
+```
+
+与 Vuex 的比较：[官方介绍](https://pinia.vuejs.org/introduction.html#Comparison-with-Vuex-3-x-4-x)
+
+总结就是：
+
+-   轻量，体积小
+-   更完整的 TypeScript 支持
+-   没有 mutation，不需要考虑创建规则来管理状态
+-   更直接的 API，不需要记住用 commit 还是 dispatch，不再需要使用魔法字符串来调用操作
+-   支持多个 Store，不像 Vuex 需要多模块嵌套
