--- a/_posts/2022-02-23-前端复习之路-HTML篇.md
+++ b/_posts/2022-02-23-前端复习之路-HTML篇.md
@@ -51,7 +51,7 @@ https://juejin.cn/post/7027728332972113927#heading-11
 
 ### defer 和 async 的区别
 
-![](../img/async-defer.png)
+![](/img/async-defer.png)
 
 两个属性都是去异步加载外部的 js 脚本文件（与文档的加载是并行的），但执行顺序不一样：
 
