--- a/_posts/2022-02-23-前端复习之路-网络篇.md
+++ b/_posts/2022-02-23-前端复习之路-网络篇.md
@@ -48,7 +48,7 @@ see: https://zhuanlan.zhihu.com/p/43789231
 
 ## HTTP 各版本差异
 
-![HTTP 各版本](../img/http-versions.png)
+![HTTP 各版本](/img/http-versions.png)
 
 `HTTP 1.0`
 
