--- a/_posts/2024-08-16-浏览器架构.md
+++ b/_posts/2024-08-16-浏览器架构.md
@@ -29,7 +29,7 @@ tags:
 
 以 Chrome 进程架构为例：
 
-![chrome](../img/chrome-framework.png)
+![chrome](/img/chrome-framework.png)
 
 -   浏览器进程。主要负责界面显示、用户交互、子进程管理，同时提供存储等功能。
 -   渲染进程。核心任务是将 HTML、CSS 和 JavaScript 转换为用户可以与之交互的网页，排版引擎 Blink 和 JavaScript 引擎 V8 都是运行在该进程中，默认情况下，Chrome 会为每个 Tab 标签创建一个渲染进程。出于安全考虑，渲染进程都是运行在沙箱模式下。
