--- a/_posts/2022-02-23-前端复习之路-JS篇.md
+++ b/_posts/2022-02-23-前端复习之路-JS篇.md
@@ -179,7 +179,7 @@ extends 实现继承
 
 （2）创建词法环境组件  
 ● 词法环境是一种有标识符——变量映射的数据结构，标识符是指变量/函数名，变量是对实际对象或原始数据的引用。  
-● 词法环境的内部有两个组件：加粗样式：环境记录器:用来储存变量个函数声明的实际位置外部环境的引用：可以访问父级作用域
+● 词法环境的内部有两个组件 - `环境记录器` : 用来储存变量个函数声明的实际位置 - `外部环境的引用`：可以访问父级作用域
 
 （3）创建变量环境组件  
 ● 变量环境也是一个词法环境，其环境记录器持有变量声明语句在执行上下文中创建的绑定关系。
@@ -197,6 +197,65 @@ extends 实现继承
 
 （3）eval 函数执行上下文  
 执行在 eval 函数中的代码会有属于他自己的执行上下文，不过 eval 函数不常使用，不做介绍
+
+### 作用域和执行上下文的区别
+
+执行上下文在运行时确定，随时可能改变；作用域在定义时就确定，并且不会改变。
+
+## 作用域、词法环境、执行上下文的概念
+
+作用域：独立的区域，让变量不会向外暴露出去。作用域最大的用处就是隔离变量。内层作用域可以访问外层作用域。一个作用域下可能包含若干个执行上下文。
+
+词法环境：相应代码块内标识符与变量值、函数值之间的关联关系的一种体现。词环境内部包含环境记录器和对外部环境的引用。环境记录器是存储变量和函数声明的实际位置，对外部环境的引用意味着可以访问父级词法环境。
+
+执行上下文：JavaScript 代码运行的环境，创建执行上下文时会进行 this 绑定、创建词法环境和变量环境。
+
+## 隐式类型转换
+
+JavaScript 中每个值隐含的自带的方法，用来将值转换为基本类型值。如果值为基本类型，则直接返回值本身；
+
+如果值为对象：
+
+```
+ToPrimitive(obj, type)
+```
+
+type 的值为 number 或者 string。
+
+（1）当 type 为 number 时规则如下：
+
+-   调用 obj 的 valueOf 方法，如果为原始值，则返回，否则下一步；
+-   调用 obj 的 toString 方法，后续同上；
+-   抛出 TypeError 异常。
+
+（2）当 type 为 string 时规则如下：
+
+-   调用 obj 的 toString 方法，如果为原始值，则返回，否则下一步；
+-   调用 obj 的 valueOf 方法，后续同上；
+-   抛出 TypeError 异常。
+
+可以看出两者的主要区别在于调用 toString 和 valueOf 的先后顺序。默认情况下：
+
+-   如果对象为 Date 对象，则 type 默认为 string；
+-   其他情况下，type 默认为 number。
+
+### 运算符之间的隐式转换
+
+1. 加号运算符
+
+    如果两边至少一个 sting 类型，两边都会转换为字符串；其他情况下，都会转换为数字。
+
+2. -、*、\ 操作符
+
+    都转换为数字
+
+3. == 操作符
+
+    两边值尽可能转换为数字比较，详见 [MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Equality)。
+
+4. <、> 操作符
+
+    如果两边都是字符串，则按照字典顺序比较；其他情况下，两边都会转换为数字比较。
 
 ## 事件循环
 
