--- a/_posts/2022-03-09-算法.md
+++ b/_posts/2022-03-09-算法.md
@@ -70,7 +70,7 @@ int BFS(Node start, Node target) {
     while (q not empty) {
         int sz = q.size();
         /* 将当前队列中的所有节点向四周扩散 */
-        for (int i 0; i < sz; i++) {
+        for (int i = 0; i < sz; i++) {
             Node cur = q.poll();
             /* 划重点，这里判断是否到达终点 */
             if (cur is target) {
@@ -97,11 +97,12 @@ int BFS(Node start, Node target) {
 ```js
 var BFS = function (root) {
     if (root === null) return 0;
-    var queue = [root];
-    var depth = 1;
+    const queue = [root];
+    let depth = 1;
     while (queue.length !== 0) {
-        var cur = queue.shift();
-        for (var i = 0; i < queue.length; i++) {
+        const sz = queue.length;
+        for (var i = 0; i < sz; i++) {
+            const cur = queue.shift();
             if (cur.left === null && cur.right === null) {
                 return depth;
             }
@@ -252,7 +253,10 @@ function partition(arr, left, right) {
             partitionIndex++;
         }
     }
-    [arr[partitionIndex], arr[pivotIndex]] = [arr[pivotIndex], arr[partitionIndex]];
+    [arr[partitionIndex], arr[pivotIndex]] = [
+        arr[pivotIndex],
+        arr[partitionIndex],
+    ];
     return partitionIndex;
 }
 ```
@@ -285,10 +289,10 @@ function merge(left, right) {
 
 ### 堆排序
 
-① 建立大顶堆：最大元素位于堆顶。
-② 将堆顶元素（第一个元素）与堆底元素（最后一个元素）交换。此时数组最后一个元素最大，再排序剩余的元素。
-③ 从堆顶元素开始，从顶到底执行堆化操作（sift down）。完成堆化后，堆的性质得到修复。
-④ 重复上述步骤，循环 n - 1 轮后，即可完成数组排序。
+1. 建立大顶堆：最大元素位于堆顶。
+2. 将堆顶元素（第一个元素）与堆底元素（最后一个元素）交换。此时数组最后一个元素最大，再排序剩余的元素。
+3. 从堆顶元素开始，从顶到底执行堆化操作（sift down）。完成堆化后，堆的性质得到修复。
+4. 重复上述步骤，循环 n - 1 轮后，即可完成数组排序。
 
 ```js
 /* 堆的长度为 n ，从节点 i 开始，从顶至底堆化 */
@@ -503,12 +507,9 @@ return s.substr(start, end - start + 1);
 循环的条件也可以改一下
 
 ```js
-for (
-    let len = 1;
-    len <= length;
-    len++ //遍历所有的长度
-)
-    for (let start = 0; start < length; start++) {
+// 遍历所有的长度
+for (let len = 1; len <= length; len++)
+    for (let i = 0; i < length; i++) {
         let j = len + i - 1;
         // 如果右边界越界，就可以退出当前循环
         if (j >= s.length) {
