--- a/_posts/2022-02-23-前端复习之路-JS篇.md
+++ b/_posts/2022-02-23-前端复习之路-JS篇.md
@@ -251,6 +251,7 @@ type 的值为 number 或者 string。
 
 3. == 操作符
 
+    null == undefined 比较结果是 true，除此之外，null、undefined 和其他任何结果的比较值都为 false。
     两边值尽可能转换为数字比较，详见 [MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Equality)。
 
 4. <、> 操作符
