--- a/_posts/2022-02-23-前端复习之路-工程化篇.md
+++ b/_posts/2022-02-23-前端复习之路-工程化篇.md
@@ -334,3 +334,8 @@ Terser、UglifyJS 等 DCE 工具“摇”掉标记中无效的代码。
 7. HotModulePlugin 将会对新旧模块进行对比，决定是否更新模块，再决定更新模块后，检查模块之间的依赖关系，更新模块的同时更新模块间的依赖引用。
 8. 当 HMR 失败后，回到 live reload 操作。通过浏览器刷新获取最新打包代码。
    ![HMR](/img/webpack-HMR.png)
+
+
+## Bun 是什么？
+
+Bun 不仅是一个专注性能与开发者体验的全新 JavaScript 运行时，还是一个快速的、全能的工具包，可用于运行、构建、测试和调试JavaScript和TypeScript代码，无论是单个文件还是完整的全栈应用。
