--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -145,6 +145,23 @@ function throttle(fn, wait) {
 
 ```
 
+``为何在此处需要声明一个中间变量 `context` 来确定 `this` 的指向呢？``
+一般情况下是没有问题的，但在一些复杂的情况下，比如将防抖/节流函数作为回调函数传递，this 指向可能会发生变化
+
+```js
+const myObject = {
+    value: 0,
+    increment() {
+        this.value++;
+        console.log(this.value);
+    }
+};
+
+myObject.debouncedIncrement = debounce(myObject.increment, 300);
+
+setTimeout(myObject.debouncedIncrement, 1000); // 这里的 this 不再指向 myObject
+```
+
 ## apply、call、bind
 
 ```js
@@ -224,6 +241,8 @@ Function.prototype.myBind = function (context) {
     return fBound;
 };
 ```
+
+赋值 context.fn，是为了定义 this 绑定（函数作为对象的方法调用时，this 指向调用该方法的对象）。
 
 ## 异步任务调度
 
