--- a/_posts/2024-10-15-浏览器跨Tab通信.md
+++ b/_posts/2024-10-15-浏览器跨Tab通信.md
@@ -83,10 +83,12 @@ self.onconnect = function (event) {
     port.onmessage = function (event) {
         const message = event.data;
         console.log('Received message:', message);
+
+        // 发送消息
+        port.postMessage('Hello from Worker');
     };
 
-    // 发送消息
-    port.postMessage('Hello from Worker');
+    port.start();
 };
 ```
 
@@ -109,3 +111,7 @@ navigator.serviceWorker.addEventListener('message', function (event) {
     console.log('Received message:', event.data);
 });
 ```
+
+## 总结
+
+以上方式都必须在同源页面下，除此之外也可以通过 IndexedDB、服务端 Websocket 等方式。不同域之间则需要通过 postMessage 来实现通信。
