--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -145,7 +145,7 @@ function throttle(fn, wait) {
 
 ```
 
-``为何在此处需要声明一个中间变量 `context` 来确定 `this` 的指向呢？``
+`` 为何在此处需要声明一个中间变量 `context` 来确定 `this` 的指向呢？ ``
 一般情况下是没有问题的，但在一些复杂的情况下，比如将防抖/节流函数作为回调函数传递，this 指向可能会发生变化
 
 ```js
@@ -154,7 +154,7 @@ const myObject = {
     increment() {
         this.value++;
         console.log(this.value);
-    }
+    },
 };
 
 myObject.debouncedIncrement = debounce(myObject.increment, 300);
@@ -388,6 +388,96 @@ const middleware = [mid1, mid2, mid3];
 compose(middleware)({});
 ```
 
+## API 中间件模式
+
+```js
+// 异步API执行器
+const asyncApiExecutor = async (...args) => {
+    console.log('Async API called with args:', ...args);
+    return new Promise(resolve => {
+        setTimeout(() => {
+            console.log('Async API execution completed');
+            resolve('API Result');
+        }, 1000);
+    });
+};
+
+// 中间件机制
+function applyMiddlewares(fn, middlewares) {
+    return function (...args) {
+        let index = -1;
+
+        function dispatch(i) {
+            if (i <= index) {
+                throw new Error('next() called multiple times');
+            }
+            index = i;
+            if (i === middlewares.length) {
+                return fn(...args);
+            }
+
+            const middleware = middlewares[i];
+            if (!middleware) return;
+
+            return middleware(dispatch.bind(null, i + 1))(...args);
+        }
+
+        return dispatch(0);
+    };
+}
+
+// 中间件定义
+const loggingMiddleware =
+    next =>
+    async (...args) => {
+        console.log('Logging Middleware before');
+        const result = await next(...args);
+        console.log('Logging Middleware after');
+        return result;
+    };
+
+const timingMiddleware =
+    next =>
+    async (...args) => {
+        console.log('Timing Middleware before');
+        const start = Date.now();
+        const result = await next(...args);
+        const end = Date.now();
+        console.log('Timing Middleware after');
+        console.log(`Execution time: ${end - start}ms`);
+        return result;
+    };
+
+const errorHandlingMiddleware =
+    next =>
+    async (...args) => {
+        try {
+            console.log('Error Handling Middleware before');
+            const result = await next(...args);
+            console.log('Error Handling Middleware after');
+            return result;
+        } catch (error) {
+            console.error('Error caught in Middleware:', error);
+        }
+    };
+
+// 使用中间件包装异步API
+const enhancedApiExecutor = applyMiddlewares(asyncApiExecutor, [
+    errorHandlingMiddleware,
+    loggingMiddleware,
+    timingMiddleware,
+]);
+
+// 调用增强后的API
+enhancedApiExecutor('arg1', 'arg2')
+    .then(result => {
+        console.log('Final result:', result);
+    })
+    .catch(error => {
+        console.error('Unhandled error:', error);
+    });
+```
+
 ## 深拷贝
 
 考虑内置对象 Date、RegExp 和循环引用的问题
@@ -467,4 +557,195 @@ scheduler.addTask(1000, '1');
 scheduler.addTask(500, '2');
 scheduler.addTask(300, '3');
 scheduler.addTask(400, '4');
+```
+
+## 实现一个简易的 Vue
+
+```js
+class Vue {
+    constructor(options) {
+        this.$options = options;
+        this.$data = options.data;
+            this.$el = typeof options.el === 'string' ? document.querySelector(options.el) : options.el
+            this._proxyData(this.$data)
+            new Observer(this.$data)
+            new Compiler(this)
+    },
+    _proxyData(data) {
+        Object.keys(data).forEach((key) => {
+            Object.defineProperty(this, key, {
+                enumerable: true,
+                configurable: true,
+                get() {
+                    return data[key]
+                },
+                set(newVal) {
+                    if (newVal !== data[key]) {
+                        data[key] = newVal
+                    }
+                }
+            })
+        })
+    }
+}
+
+
+class Dep {
+    constructor() {
+        this.subs = []
+    }
+
+    addSub(sub) {
+        this.subs.push(sub);
+    }
+
+    notify() {
+        this.subs.forEach(sub => sub.update());
+    }
+}
+
+class Observer {
+    constructor(data) {
+        this.observe(data);
+    }
+
+    observe(data) {
+        if (!data || typeof data !== 'object') {
+            return;
+        }
+        Object.keys(data).forEach(key => this.defineReactive(data, key, data[key]));
+    }
+
+    defineReactive(obj, key, val) {
+        const dep = new Dep();
+        Object.defineProperty(obj, key, {
+            enumerable: true,
+            configurable: true,
+            get() {
+                if (Dep.target) {
+                    dep.addSub(Dep.target);
+                }
+                return val;
+            },
+            set(newVal) {
+                if (val !== newVal) {
+                    val = newVal;
+                    this.observe(newVal);
+                    dep.notify();
+                }
+            }
+        });
+    }
+}
+
+class Watcher {
+    constructor(vm, key, callback) {
+        this.vm = vm;
+        this.key = key;
+        this.callback = callback;
+
+        Dep.target = this;
+        this.oldValue = this.vm[key];
+        Dep.target = null;
+    }
+
+    update() {
+        const value = this.vm[this.key];
+        if (value !== this.oldValue) {
+            this.callback(value);
+        }
+    }
+}
+
+class Compiler {
+    constructor(vm) {
+        this.el = vm.$el;
+        this.vm = vm;
+        this.compile(this.el);
+    }
+    compile(el) {
+        let childNodes = el.childNodes;
+        Array.from(childNodes).forEach((node) => {
+            // 处理文本节点
+            if (this.isTextNode(node)) {
+                this.compileText(node);
+            } else if (this.isElementNode(node)) {
+                // 处理元素节点
+                this.compileElement(node);
+            }
+
+            // 判断node节点，是否有子节点，如果有子节点，要递归调用compile
+            if (node.childNodes && node.childNodes.length) {
+                this.compile(node);
+            }
+        });
+    }
+    // 编译元素节点，处理指令
+    compileElement(node) {
+        // console.log(node.attributes)
+        // 遍历所有的属性节点
+        Array.from(node.attributes).forEach((attr) => {
+            // 判断是否是指令
+            let attrName = attr.name;
+            if (this.isDirective(attrName)) {
+                // v-text --> text
+                attrName = attrName.substr(2);
+                let key = attr.value;
+                this.update(node, key, attrName);
+            }
+        });
+    }
+
+    update(node, key, attrName) {
+        let updateFn = this[attrName + "Updater"];
+        updateFn && updateFn.call(this, node, this.vm[key], key);
+    }
+
+    // 处理 v-text 指令
+    textUpdater(node, value, key) {
+        node.textContent = value;
+        new Watcher(this.vm, key, (newValue) => {
+            node.textContent = newValue;
+        });
+    }
+    // v-model
+    modelUpdater(node, value, key) {
+        node.value = value;
+        new Watcher(this.vm, key, (newValue) => {
+            node.value = newValue;
+        });
+        // 双向绑定
+        node.addEventListener("input", () => {
+            this.vm[key] = node.value;
+        });
+    }
+
+    // 编译文本节点，处理差值表达式
+    compileText(node) {
+        // console.dir(node)
+        // {{  msg }}
+        let reg = /\{\{(.+?)\}\}/;
+        let value = node.textContent;
+        if (reg.test(value)) {
+            let key = RegExp.$1.trim();
+            node.textContent = value.replace(reg, this.vm[key]);
+
+            // 创建watcher对象，当数据改变更新视图
+            new Watcher(this.vm, key, (newValue) => {
+                node.textContent = newValue;
+            });
+        }
+    }
+    // 判断元素属性是否是指令
+    isDirective(attrName) {
+        return attrName.startsWith("v-");
+    }
+    // 判断节点是否是文本节点
+    isTextNode(node) {
+        return node.nodeType === 3;
+    }
+    isElementNode(node) {
+        return node.nodeType === 1;
+    }
+}
 ```
