--- a/_posts/2024-08-16-浏览器架构.md
+++ b/_posts/2024-08-16-浏览器架构.md
@@ -49,3 +49,5 @@ tags:
 -   分块：合成线程会将图层划分为图块，发送给光栅线程进行栅格化。
 -   光栅化：光栅线程将图块转换为位图。栅格化过程都会使用 GPU 来加速（快速栅格化），生成的位图被保存在 GPU 内存中。
 -   合成：合成线程将多个位图构建成合成帧，GPU 将其渲染到页面。
+
+[渲染页面：浏览器的工作原理](https://developer.mozilla.org/zh-CN/docs/Web/Performance/How_browsers_work)
