--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -749,3 +749,223 @@ class Compiler {
     }
 }
 ```
+
+## 实现 lodash 的 `get` 方法
+
+```js
+function get(object, path, defaultValue = 'undefined') {
+    const paths = Array.isArray(path)
+        ? path
+        : path.replace(/\[/g, '.').replace(/\]/, '').split('.');
+
+    return (
+        paths.reduce((obj, key) => {
+            console.log(obj, key);
+            return (obj || {})[key];
+        }, object) || defaultValue
+    );
+}
+```
+
+## 限制异步操作的并发个数，并尽可能快的完成全部
+
+有 8 个图片资源的 url，已经存储在数组 urls 中。
+
+urls 类似于['https://image1.png', 'https://image2.png', ....]
+
+而且已经有一个函数 function loadImg，输入一个 url 链接，返回一个 Promise，该 Promise 在图片下载完成的时候 resolve，下载失败则 reject。
+
+但有一个要求，任何时刻同时下载的链接数量不可以超过 3 个。
+
+请写一段代码实现这个需求，要求尽可能快速地将所有图片下载完成。
+
+```js
+var urls = [
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting1.png',
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting2.png',
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting3.png',
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting4.png',
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting5.png',
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/bpmn6.png',
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/bpmn7.png',
+    'https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/bpmn8.png',
+];
+function loadImg(url) {
+    return new Promise((resolve, reject) => {
+        const img = new Image();
+        img.onload = function () {
+            console.log('一张图片加载完成');
+            resolve(img);
+        };
+        img.onerror = function () {
+            reject(new Error('Could not load image at' + url));
+        };
+        img.src = url;
+    });
+}
+```
+
+```js
+function limitLoad(urls, handler, limit) {
+    let sequence = [].concat(urls); // 复制urls
+    // 这一步是为了初始化 promises 这个"容器"
+    let promises = sequence.splice(0, limit).map((url, index) => {
+        return handler(url).then(() => {
+            // 返回下标是为了知道数组中是哪一项最先完成
+            return index;
+        });
+    });
+    // 注意这里要将整个变量过程返回，这样得到的就是一个Promise，可以在外面链式调用
+    return sequence
+        .reduce((pCollect, url) => {
+            return pCollect
+                .then(() => {
+                    return Promise.race(promises); // 返回已经完成的下标
+                })
+                .then(fastestIndex => {
+                    // 获取到已经完成的下标
+                    // 将"容器"内已经完成的那一项替换
+                    promises[fastestIndex] = handler(url).then(() => {
+                        return fastestIndex; // 要继续将这个下标返回，以便下一次变量
+                    });
+                })
+                .catch(err => {
+                    console.error(err);
+                });
+        }, Promise.resolve()) // 初始化传入
+        .then(() => {
+            // 最后三个用.all来调用
+            return Promise.all(promises);
+        });
+}
+limitLoad(urls, loadImg, 3)
+    .then(res => {
+        console.log('图片全部加载完毕');
+        console.log(res);
+    })
+    .catch(err => {
+        console.error(err);
+    });
+```
+
+## 实现一个串行队列
+
+实现一个串行请求队列 serial 函数，接收包含异步请求的数组，按顺序依次执行。
+
+```js
+function serial(arr) {
+    return arr.reduce((pre, cur) => pre.then(() => cur()), Promise.resolve());
+}
+
+// forEach 版本
+function serial(arr) {
+    var sequence = Promise.resolve();
+    arr.forEach(function (item) {
+        sequence = sequence.then(item);
+    });
+    return sequence;
+}
+```
+
+## 实现 mergePromise 函数
+
+实现 mergePromise 函数，把传进去的数组按顺序先后执行，并且把返回的数据先后放到数组 data 中。
+
+```js
+const time = timer => {
+    return new Promise(resolve => {
+        setTimeout(() => {
+            resolve();
+        }, timer);
+    });
+};
+const ajax1 = () =>
+    time(2000).then(() => {
+        console.log(1);
+        return 1;
+    });
+const ajax2 = () =>
+    time(1000).then(() => {
+        console.log(2);
+        return 2;
+    });
+const ajax3 = () =>
+    time(1000).then(() => {
+        console.log(3);
+        return 3;
+    });
+
+function mergePromise() {
+    // 在这里写代码
+}
+
+mergePromise([ajax1, ajax2, ajax3]).then(data => {
+    console.log('done');
+    console.log(data); // data 为 [1, 2, 3]
+});
+
+// 要求分别输出
+// 1
+// 2
+// 3
+// done
+// [1, 2, 3]
+```
+
+```js
+function mergePromise(arr) {
+    return arr.reduce((pre, cur) => {
+        return pre.then(data => {
+            return cur().then(res => [...data, res]);
+        });
+    }, Promise.resolve([]));
+}
+```
+
+## 将数字转换成汉语
+
+```js
+function trans(number) {
+    const integral = number + '';
+    const digits = ['零', '一', '二', '三', '四', '五', '六', '七', '八', '九'];
+    const radices = ['', '十', '百', '千'];
+    const bigRadices = ['', '万', '亿'];
+
+    let result = '';
+    let zeroCount = 0;
+    for (let i = 0; i < integral.length; i++) {
+        const digit = +integral[i];
+        // 尾数个数
+        const p = integral.length - 1 - i;
+        // 有几个 4 位
+        const quotient = Math.floor(p / 4);
+        // 单位
+        const module = p % 4;
+
+        if (digit === 0) {
+            zeroCount++;
+        }
+        else {
+            if (zeroCount > 0) {
+                result += digits[0];
+                zeroCount = 0;
+            }
+
+            // 10 要简写为十
+            if (digit === 1 && module === 1) {
+                result += radices[module];
+            }
+            else {
+                result += digits[digit] + radices[module];
+            }
+        }
+
+
+        // 刚好是 4 位的时候加上 万 或者 亿
+        if (module === 0 && zeroCount < 4) {
+            result += bigRadices[quotient];
+        }
+    }
+    return result;
+}
+```
