--- a/_posts/2023-07-04-设计模式.md
+++ b/_posts/2023-07-04-设计模式.md
@@ -10,6 +10,187 @@ tags:
     - 读书笔记
 ---
 
+## MVC、MVP、MVVM 模式
+
+MVC、MVP 和 MVVM 是三种常见的软件设计模式，它们主要用于构建用户界面和分离业务逻辑。
+
+### MVC（Model-View-Controller）
+
+**模型(Model)**：负责处理数据和业务逻辑。
+
+**视图(View)**：负责展示信息给用户。
+
+**控制器(Controller)**：接收用户的输入并调用模型或视图的更新方法。
+
+在 MVC 模式中，用户操作通常由视图（View）接收，然后传递给控制器（Controller）处理。Controller 根据业务逻辑，更新模型数据（Model）。View 和 Model 应用了观察者模式，当 Model 层发生改变的时候它会通知有关 View 层更新页面。
+
+```js
+// Model：管理数据和业务逻辑，并通知观察者（视图）
+class Model {
+    constructor() {
+        this.data = 0;
+        this.observers = []; // 存放观察者
+    }
+
+    // 添加观察者
+    addObserver(observer) {
+        this.observers.push(observer);
+    }
+
+    // 移除观察者
+    removeObserver(observer) {
+        this.observers = this.observers.filter(obs => obs !== observer);
+    }
+
+    // 通知所有观察者
+    notifyObservers() {
+        this.observers.forEach(observer => observer.update(this));
+    }
+
+    increment() {
+        this.data++;
+        this.notifyObservers(); // 数据变化后，通知观察者
+    }
+
+    decrement() {
+        this.data--;
+        this.notifyObservers(); // 数据变化后，通知观察者
+    }
+
+    getData() {
+        return this.data;
+    }
+}
+
+class View {
+    constructor() {
+        this.display = document.getElementById('display');
+        this.incrementButton = document.getElementById('increment');
+        this.decrementButton = document.getElementById('decrement');
+    }
+
+    bindClick(controller) {
+        this.incrementButton.addEventListener('click', () => {
+            controller.increment();
+        });
+        this.decrementButton.addEventListener('click', () => {
+            controller.decrement();
+        });
+    }
+
+    // 当模型变化时，模型调用此方法，传入自身
+    update(model) {
+        this.render(model.getData());
+    }
+
+    render(data) {
+        this.display.innerText = data;
+    }
+}
+
+class Controller {
+    constructor(model, view) {
+        this.model = model;
+        this.view = view;
+
+        // 将视图注册为模型的观察者
+        this.model.addObserver(this.view);
+
+        // 让视图知道控制器，以便通知用户交互
+        this.view.bindClick(this);
+
+        // 初始化视图显示
+        this.view.render(this.model.getData());
+    }
+
+    handleIncrement() {
+        this.model.increment();
+    }
+
+    handleDecrement() {
+        this.model.decrement();
+    }
+}
+
+const app = new Controller(new Model(), new View());
+```
+
+### MVP（Model-View-Presenter）
+
+**模型(Model)**：与 MVC 中的相同。
+
+**视图(View)**：与 MVC 中的相同，但通常包含一个接口来定义如何与 Presenter 交互。
+
+**演示者(Presenter)**：充当 View 与 Model 的中间人，它封装了所有与用户交互相关的代码，并将这些操作转换为对模型的请求。
+
+在 MVP 模式中，视图不直接与模型交互，而是通过演示者来处理。这使得代码更加模块化，易于测试和维护。
+
+```js
+class Model {
+    constructor() {
+        this.data = 0;
+    }
+
+    increment() {
+        this.data++;
+    }
+
+    decrement() {
+        this.data--;
+    }
+
+    getData() {
+        return this.data;
+    }
+}
+
+class View {
+    constructor(presenter) {
+        this.display = document.getElementById('display');
+        this.incrementButton = document.getElementById('increment');
+        this.decrementButton = document.getElementById('decrement');
+
+        this.incrementButton.addEventListener('click', () => {
+            presenter.handleIncrement();
+        });
+        this.decrementButton.addEventListener('click', () => {
+            presenter.handleDecrement();
+        });
+    }
+
+    render(data) {
+        this.display.innerText = data;
+    }
+}
+
+class Presenter {
+    constructor(model, view) {
+        this.model = model;
+        this.view = view;
+    }
+
+    handleIncrement() {
+        this.model.increment();
+        this.view.render(this.model.getData());
+    }
+
+    handleDecrement() {
+        this.model.decrement();
+        this.view.render(this.model.getData());
+    }
+}
+
+const app = new Presenter(new Model(), new View(app));
+```
+
+### MVVM（Model-View-ViewModel）
+
+**模型(Model)**：与 MVC/MVP 中的相同。
+
+**视图(View)**：与 MVC/MVP 中的相同，但它通常是双向绑定的，即当数据变化时自动更新视图，反之亦然。
+
+**视图模型(ViewModel)**：作为连接视图和模型的桥梁，它将视图的状态映射到模型
+
 ## 单例模式
 
 单例模式的定义是: 保证一个类仅有一个实例，并提供一个访问它的全局访问点。
