--- a/_posts/2022-02-23-前端复习之路-Vue篇.md
+++ b/_posts/2022-02-23-前端复习之路-Vue篇.md
@@ -77,7 +77,7 @@ Vue3 新特性，vue3 相比 vue2：
 
 新增特性：
 
--   framents 【支持多个根节点】
+-   fragments 【支持多个根节点】
 -   Teleport 【通过 Teleport，我们可以在组件的逻辑位置写模板代码，然后在 Vue 应用范围之外渲染它】
 -   composition Api
 -   createRenderer 【能够构建自定义渲染器，将 vue 的开发模型扩展到其他平台】
