--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -303,6 +303,28 @@ function camelCaseToUnderscore(str) {
 }
 ```
 
+模板渲染
+
+```js
+let str = '我是{{name}},年龄{{age}},性别{{sex}}';
+let person = {
+    name: '张三',
+    age: 18,
+    sex: '男',
+};
+```
+
+```js
+function compile(template, data) {
+    return template.replace(/{{(\w+)}}/g, (match, key) => {
+        return key.trim() in data ? data[key.trim()] : match;
+    });
+}
+
+let result = compile(str, person);
+console.log(result); // 输出: 我是张三,年龄18,性别男
+```
+
 ## 实现 flat 方法
 
 ```js
@@ -944,8 +966,7 @@ function trans(number) {
 
         if (digit === 0) {
             zeroCount++;
-        }
-        else {
+        } else {
             if (zeroCount > 0) {
                 result += digits[0];
                 zeroCount = 0;
@@ -954,18 +975,29 @@ function trans(number) {
             // 10 要简写为十
             if (digit === 1 && module === 1) {
                 result += radices[module];
-            }
-            else {
+            } else {
                 result += digits[digit] + radices[module];
             }
         }
-
 
         // 刚好是 4 位的时候加上 万 或者 亿
         if (module === 0 && zeroCount < 4) {
             result += bigRadices[quotient];
         }
     }
+    return result;
+}
+```
+
+## 实现 reduce
+
+```js
+Array.prototype.myReduce = function (fn, initialValue) {
+    let result = initialValue ? initialValue : this[0];
+    for (let i = initialValue ? 1 : 0; i < this.length; i++) {
+        result = fn(result, this[i], i, this);
+    }
+
     return result;
 }
 ```
