--- a/_posts/2025-02-20-RSC.md
+++ b/_posts/2025-02-20-RSC.md
@@ -39,7 +39,7 @@ React Server Components 的优点
 
 要使用 React Server Components，你需要安装最新的 React 版本（18+），并确保你的服务器支持 Node.js。
 
-1. 创建 Server Component
+**1. 创建 Server Component**
 
 创建一个简单的服务器组件来获取数据并渲染。
 
@@ -73,7 +73,7 @@ const UserList = async () => {
 export default UserList;
 ```
 
-2. 创建 Client Component
+**2. 创建 Client Component**
 
 ```jsx
 // app/components/ClientComponent.client.jsx
@@ -99,7 +99,7 @@ const ClientComponent = () => {
 export default ClientComponent;
 ```
 
-3. 在页面中使用 Server Component 和 Client Component
+**3. 在页面中使用 Server Component 和 Client Component**
 
 ```js
 // app/page.jsx
